source/css/_partial/venue.scss
.module-venue {
    background: #848ba3;

    .wrapper {
    width: 100%;
    display: flex;
    flex-direction: row;
    color: white;
    margin: auto;
    }

    .map-wrapper {
        width: 80%;
    }
    iframe {
        width: 100%;
        margin: 0;
    }
    .venue {
        .venue-mask {
            display: none;
        }
        min-width: 500px;
        box-sizing: border-box;
        padding: 45px 25px;
        display: flex;
        position: relative;
        flex-direction: row;
        background: url(/images/santa-clara-convention-center.jpg);
        background-size: cover;
        background-position: left center;
        .conf-info {
            width: 220px;
            font-family: $Avenir-Next;
            font-size: 31px;
            color: #FFF;
            letter-spacing: 0;
            line-height: 32px;
            font-weight: 600;
            margin-right: 30px;
            .venue-time {
                font-size: 18px;
            }
        }
        .venue-info {
            font-family: $Avenir-Next;
            font-weight: 600;
            font-size: 13px;
            color: #FFF;
            letter-spacing: 0;
            line-height: 22px;
            span {
                display: block;
            }
        }
        .register-button {
            position: absolute;
            background: #0070E8;
            border-radius: 4px;
            box-sizing: border-box;
            width: 440px;
            bottom: 40px;
            color: white;
            letter-spacing: .7px;
        }
    }
}

